Image Capture Mac: make setOptions() resolve the callback with true

This CL implements VideoCaptureDevice::setOptions() for Mac
so that we can resolve the callback with a true value -- 
setPhotoOptionsCallback on ToT resolves |callback| with false
if not explicitly Run() and Blink will think it has failed.

Bug: 723929
Change-Id: I2c9f0ec482538f7f1c389ea4bc970552fd39e324
Reviewed-on: https://chromium-review.googlesource.com/508183
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Reviewed-by: Vincent Scheib <scheib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#472994}
Former-commit-id: 8d9d6d4fd30cc0e8840ef957dfbd7e996fe7a498