media/capture/video/mac/video_capture_device_mac.mm
@@ -413,6 +413,21 @@ void VideoCaptureDeviceMac::GetPhotoCapabilities(
   callback.Run(std::move(photo_capabilities));
 }
 
+void VideoCaptureDeviceMac::SetPhotoOptions(mojom::PhotoSettingsPtr settings,
+                                            SetPhotoOptionsCallback callback) {
+  DCHECK(task_runner_->BelongsToCurrentThread());
+  // Drop |callback| and return if there are any unsupported |settings|.
+  // TODO(mcasas): centralise checks elsewhere, https://crbug.com/724285.
+  if ((settings->has_width &&
+       settings->width != capture_format_.frame_size.width()) ||
+      (settings->has_height &&
+       settings->height != capture_format_.frame_size.height()) ||
+      settings->has_fill_light_mode || settings->has_red_eye_reduction) {
+    return;
+  }
+  callback.Run(true);
+}
+
 bool VideoCaptureDeviceMac::Init(VideoCaptureApi capture_api_type) {
   DCHECK(task_runner_->BelongsToCurrentThread());
   DCHECK_EQ(state_, kNotInitialized);
